--- a/DAD_lab3/ClientFormApplication/ClientFormApplication.csproj
+++ b/DAD_lab3/ClientFormApplication/ClientFormApplication.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{220572DC-7948-4E05-A7D0-36C20A0F68A6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClientFormApplication</RootNamespace>
     <AssemblyName>ClientFormApplication</AssemblyName>
